# FractureBEM

./: CMakeLists.txt  README.md
examples/: Armadillo.ply.regions  Armadillo_post.bat  Armadillo_run.bat  Armadillo_split_run.bat  Armadillo_split_run_v2.bat  Column.stl.regions  _readme.txt  bunny.elements  bunny.nodes  bunny.regions  bunny_mat_post.bat  bunny_mat_run.bat  column_post.bat  column_run.bat  cube.boundary  cube.elements  cube.header  cube.nodes  cube_run.bat  cube_run_v2.bat  edge_crack.boundary  edge_crack.elements  edge_crack.header  edge_crack.names  edge_crack.nodes  edge_crack_run_pure_modes.bat  notched_bar.boundary  notched_bar.elements  notched_bar.header  notched_bar.names  notched_bar.nodes  notched_bar_run.bat
hyena/: CMakeLists.txt
hyena/wrap/: HyENAWrapper.cpp  HyENAWrapper.h  HyENAWrapperImpl.h
src/: FractureBEM.cpp  FractureBEM.h  FractureModel.cpp  FractureModel.h  MaterialModel.cpp  PostProcessor.cpp  PostProcessor.h  Reader.h  SubsampledCrackTip.cpp  SubsampledCrackTip.h  VDBLoader.cpp  VDBLoader.h  VDBWrapper.cpp  VDBWrapper.h  VDBWrapper_mesh.cpp  main.cpp  mainPrepMesh.cpp  mainSegment.cpp  mainVisMesh.cpp  mySegment.h  types.h  vcgHelper.h
vcg/wrap/: _INCOMPLETE_.txt
